Minor general CSS tweaks. Correct front and letter-spacing.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Lato;
+    font-family: Graphik, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;;
     font-size: 18px;
 }
 h1{
@@ -14,13 +14,15 @@ a{
 nav{
     font-size: 20px;
 }
+
 .nav-link{
     color: #47525E;
-    
+    font-weight: 500;
+    letter-spacing: -0.2px;
 }
 
 @media only screen and (min-width: 1200px){
-        .navbar-expand-xl .navbar-nav .nav-link {
+    .navbar-expand-xl .navbar-nav .nav-link {
         padding-left:25px;
         padding-right:25px;
     }
@@ -30,5 +32,4 @@ nav{
 } 
 .navbar-light .navbar-nav .active > .nav-link{
     color: #976DD0;
-    font-weight: 700;
 }
